<resources>
    <string name="app_name">TooWine</string>

    <!-- OnboardingActivity   -->
    <string name="onboarding_getStarted">Comenzar</string>
    <string name="onboarding_next" />
    <string name="onboarding_skip">saltar</string>

    <!-- OnboardingItemContainer -->
    <string name="onboarding_textview_title">titulo</string>
    <string name="onboarding_textview_description">descripcion body</string>

    <!--  OnboardingData  -->
    <string name="onboarding_pag0_title">Bienvenido a TooWine</string>
    <string name="onboarding_pag0_description">Siéntete como en una vinoteca, donde podrás explorar hasta los últimos aromas de los vinos más populares del territorio nacional</string>
    <string name="onboarding_pag1_title">Vinoteca</string>
    <string name="onboarding_pag1_description">Organizados por clases, tendrá un listado detallado con las botellas de vinos más populares del mercado</string>
    <string name="onboarding_pag2_title">Favoritos</string>
    <string name="onboarding_pag2_description">¿Eres indeciso? ¿Elegirías la mayoría?\n Agrega en tu "maleta" las botellas de vino que vayan siendo de tu agrado para una posterior compra o visualización de los detalles</string>
    <string name="onboarding_pag3_title">Noticias Vinícolas</string>
    <string name="onboarding_pag3_description">¡Estate al loro!\n Mantente actualizado con lo último sobre vinos y bodegas. Enriquecerás y puede ser de ayuda en tu elección</string>

    <!--  Bottom_Navigation_Menu   -->
    <string name="text_label_1">Inicio</string>
    <string name="text_label_2">Vinos</string>
    <string name="text_label_3">Favs</string>
    <string name="text_label_4">RSS</string>
    <string name="text_label_5">Login</string>

    <!-- fragment titles-->
    <string name="favorite_fragment">Vinos Deseados</string>
    <string name="news_fragment">Actualidad</string>
    <string name="wine_collections_fragment">Colecciones</string>

    <!-- home activity   -->
    <string name="latest_wine_deals">Novedades</string>
    <string name="hometitle_label_deals">Novedades Diarias</string>

    <!-- homewine_recycler_items    -->
    <string name="wine_name">Nombre</string>
    <string name="wine_type">Denominación</string>
    <string name="wine_price">Precio</string>
    <string name="wine_image">Imagen de vino</string>
    <string name="origin_wine_price">Precio original</string>
    <string name="purchase_wine">comprar</string>
    <string name="onboarding_images">Onboarding Images Content</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_welcome">"Welcome!"</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_email">Formato de email no válido</string>
    <string name="invalid_password">Contraseña debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Falló al loguearse"</string>

    <!--    Login  xml -->
    <string name="login">Iniciar Sesión</string>
    <string name="login_caption">Login con tu cuenta existente</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Contraseña</string>
    <string name="login_button">Login</string>
    <string name="login_already_have_account_sign_up">¿Aún no estás registrado? Crear cuenta</string>
    <string name="profile_logout">logout</string>
    <string name="login_forgot_password">¿Olvidaste la Contraseña?</string>

    <!--    Signup xml -->
    <string name="sign_up">Regístrate</string>
    <string name="name_hint_text">Nombre</string>
    <string name="signup_confirm_password_hint_text">Confirmar Contraseña</string>
    <string name="signup_caption">crea un usuario único customizable para toowine</string>
    <string name="sign_up_button">Registrarse</string>
    <!--    profile xml -->
    <string name="provider_email">Provider email</string>
    <string name="profile_caption">Estás logueado como…</string>
    <string name="name_profile">Nombre de usuario</string>


    <!--   Signup_Fragment: validation Toast -->
    <string name="name_not_empty">Nombre no debe estar vacío</string>
    <string name="email_not_empty">Email no debe estar vacío</string>
    <string name="pass_not_empty">Contraseña no debe estar vacía</string>
    <string name="pass_less_length">Contraseña debe ser mayor a 5 caracteres </string>
    <string name="cpass_not_empty">Confirmar contraseña no debe estar vacía</string>
    <string name="cpass_less_length">Contraseña debe ser mayor a 5 caracteres</string>
    <string name="pasword_not_match">Contraseñas no coinciden</string>

    <!--    SignupFragment: Create user account-->
    <string name="fail_to_create_account">Error al crear la cuenta debido a</string>
    <string name="failed_saving_user_info">Falló al guardar los datos de usuario a la base de datos</string>
    <string name="successful_saving_user_info">Éxito al guardar en la base de datos</string>
    <string name="fail_to_log_in">Error al iniciar sesión:</string>
    <string name="invalid_webscraping">Error al extraer datos del sitio web</string>

    <!--   Favorites_Fragment -->
    <string name="must_be_logged_in_favs">Debes estar logueado para añadir a la lista de deseos</string>

    <!--  Forgot_Password_Fragment  -->
    <string name="forgot_password">Recuperar Contraseña</string>
    <string name="continue_forgot_password">Recuperar</string>
    <string name="back_to_login">volver a inciar sesión</string>
    <string name="email_sent">Link de recuperación fue enviado al email proporcionado</string>
    <string name="fail_to_send_recovery_email">Falló al enviar su link de recuperación de contraseña</string>

    <!--   WineCollectionFragment -->
    <string name="winecollection_content_descr_red">Tinto</string>
    <string name="winecollection_content_descr_rose">Rosado</string>
    <string name="winecollection_content_descr_sparkling">Espumoso</string>
    <string name="winecollection_content_descr_white">Blanco</string>

<!--    WineTypeListFragment-->
    <string name="wine_typeList_fragment">Tipos</string>
    <string name="empty_recycler">Agrega tu primer Vino a la lista de deseos</string>

<!--    HomeRecyclerAdapter-->
    <string name="failed_to_get_document_data">Falló al obtener datos del documento en la base de datos</string>
    <string name="data_inserted_successfully">Datos insertados exitosamente</string>


</resources>