<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icons_home_24"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/wineCollectionFragment"
        android:icon="@drawable/icons_wines_shelf_24"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/text_label_5"/>
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/icons_star_24"
        android:title="@string/text_label_3" />
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/icons_newspaper_24"
        android:title="@string/text_label_4"/>
</menu>