<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.account.LoginFragment">

    <TextView
        android:id="@+id/titleLabelDeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:background="@drawable/shape_edittext"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>

    <TextView
        android:id="@+id/titleCaptionSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/login_caption"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/titleLabelDeals"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.MaterialComponents.Caption"/>

    <!--    email   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCaptionSignup">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext2"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_ashes"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/emailTil"
        app:layout_constraintStart_toStartOf="@+id/emailTil"
        app:layout_constraintTop_toBottomOf="@id/emailTil">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password_hint_text"
            android:background="@drawable/shape_edittext3"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_ashes"
            android:inputType="textPassword"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--    Forgot password -->
    <TextView
        android:id="@+id/forgotPassword"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_password"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTil"/>

    <!--    Login Button    -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginMaterialButton"
        android:layout_marginTop="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:backgroundTint="@color/secondary"
        app:layout_constraintEnd_toEndOf="@id/passwordTil"
        app:layout_constraintStart_toStartOf="@id/passwordTil"
        app:layout_constraintTop_toBottomOf="@id/passwordTil" />

    <!--   if sign up account -->

    <com.google.android.material.button.MaterialButton

        android:id="@+id/signUpLoginTV"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_already_have_account_sign_up"
        android:textAlignment="center"
        android:backgroundTint="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginMaterialButton"
        app:layout_constraintVertical_bias="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>