<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.account.SignupFragment">

    <TextView
        android:id="@+id/titleLabelSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:background="@drawable/shape_edittext"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>

    <TextView
        android:id="@+id/titleCaptionSignup"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/signup_caption"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabelSignup" />

    <!--    name   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTil"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleCaptionSignup">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext2"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/name_hint_text"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_ashes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--    email   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTil">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_ashes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--    password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/emailTil"
        app:layout_constraintStart_toStartOf="@+id/emailTil"
        app:layout_constraintTop_toBottomOf="@id/emailTil">

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password_hint_text"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_ashes"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--  Confirm  password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/passwordTil"
        app:layout_constraintStart_toStartOf="@+id/passwordTil"
        app:layout_constraintTop_toBottomOf="@id/passwordTil">

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/signup_confirm_password_hint_text"
            android:background="@drawable/shape_edittext3"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:textColorHint="@color/gray_ashes"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    SignUp Button-->
    <com.google.android.material.button.MaterialButton

        android:id="@+id/registerMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/sign_up_button"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordTil"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordTil"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTil" />

</androidx.constraintlayout.widget.ConstraintLayout>