<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.account.ForgotPassword">

    <TextView
        android:id="@+id/forgotPasswordTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:background="@drawable/shape_edittext"
        android:elevation="20dp"
        android:textColor="@color/cyan_blue_600"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTiForgot"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/cyan_blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTitleTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailETForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext2"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:textColorHint="@color/cyan_blue_600"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:paddingTop="25dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButtonForgot"
        android:layout_marginTop="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_forgot_password"
        android:backgroundTint="@color/cyan_blue_600"
        app:layout_constraintEnd_toEndOf="@id/emailTiForgot"
        app:layout_constraintStart_toStartOf="@id/emailTiForgot"
        app:layout_constraintTop_toBottomOf="@id/emailTiForgot"/>

    <TextView
        android:id="@+id/backToLoginForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/orange_700"
        android:textSize="18sp"
        android:text="@string/back_to_login"
        app:layout_constraintEnd_toEndOf="@id/continueButtonForgot"
        app:layout_constraintStart_toStartOf="@id/continueButtonForgot"
        app:layout_constraintTop_toBottomOf="@id/continueButtonForgot"
        />

</androidx.constraintlayout.widget.ConstraintLayout>